# mcpiano

./: .gitignore  Cargo.toml  LICENSE_MIT  build.sh  gensel.py  gentb.py  pack.sh
src/: draw.rs  event.rs  export.rs  lib.rs  map.rs  mccommand.rs  pianoglobal.rs  play.rs  saver.rs  track.rs
src/sheet/: mod.rs  redpianov2.rs  redpianov3.rs
